# gnosis-ai-hackathon-starter

./: .env.example  README.md  main.py  main.py.finished  mypy.ini  pyproject.toml
trader_quickstart/: utils.py
trader_quickstart/agents/: README.md  agent_with_tavily.py  coinflip.py  coinflip_agent.py  kelly_agent.py  llm_agent.py  prompts.py  run_agent.py
